@@ -1,8 +1,10 @@
 DIST darkplacesengine20070927.zip 7983079 RMD160 0fd091fbc96de79250733e2dbb1f8f6329c62704 SHA1 e735af4b6776143b0a8db3fc13d77764a5e6a2d3 SHA256 265d52ab046bdd0e9a6be9b632858739fef7937244059d3e94b080a1fa917fd0
 DIST darkplacesengine20080705beta1.zip 8345816 RMD160 f5e7731b1b804c7247316afcd2d10ae58085ca1a SHA1 9d4dd681c1b80ca01a0c1e255c49f47da4b0c4ab SHA256 d2eb6af062a6abba5a3d2d28a01a8ff1806ee1b9170b1bbf463a3272ccb2fbd0
+DIST darkplacesengine20080723beta2.zip 8387405 RMD160 a0078cd9029c11018a152790f92693c6ad60d307 SHA1 b03615317bbf80777cc1bc2565e69975c156a32f SHA256 b1ea5a5d82b2dc4de4385bc54877131542e72e5bbee0f621a908af545cdefd93
 DIST fuhquake-lits.rar 8388829 RMD160 574937680f7354362088f2ec63d8941f0f4b0981 SHA1 1e9199c8ac7c9162e43c621487b712551711a45e SHA256 066fd58e2a6d157a1aa7925334d7e3e6cffa7f5c556e707bc31da8bfecea873c
 DIST id1.pk3 350470 RMD160 ac1633c56ca27ae3175e15305ce5d0e829daa43c SHA1 f83c25b74f666665369783b0f08949d480b382a8 SHA256 f1ee6e144d1942ebf91a8c71d0333eac94c73efae35377fbe7ae43e0e4ab37dc
 EBUILD darkplaces-20070927.ebuild 4995 RMD160 35f4b943d2ae331224780f2a0481ffd3defcea51 SHA1 977567cf3e96be51a7cdc1da71ce533de513d995 SHA256 a559ae8ceea0bf52619e3dd6534b5cce3adcbfab5ba0d90b7769bd1c8b4db42b
 EBUILD darkplaces-20080705_beta1.ebuild 4888 RMD160 d6213869883178a75fe5a21be07e6633c5555f85 SHA1 283fd4069a0cce08ac96eedcb68827e54a6f291d SHA256 e2b322e7c8b2eb716baf760903aa909ae4ee584408c30c33a551fec8b283ff40
+EBUILD darkplaces-20080723_beta2.ebuild 4888 RMD160 d6213869883178a75fe5a21be07e6633c5555f85 SHA1 283fd4069a0cce08ac96eedcb68827e54a6f291d SHA256 e2b322e7c8b2eb716baf760903aa909ae4ee584408c30c33a551fec8b283ff40
 EBUILD darkplaces-9999.ebuild 5089 RMD160 1c50f253b58a1bc287b3936012797fc2653323ad SHA1 ab0717034268bd91232d4db9e28d315f77624508 SHA256 113fb39c0ba7b98830e12d47b489fbb3f3af934a72ee62f8874903aa95a9fb2c
-MISC ChangeLog 1459 RMD160 0a4a777a0d6b33baa9cc8fed1576cc412f848e86 SHA1 09d69bb4e33fe6c50c13d44f96806016c2fec872 SHA256 2b02427e51b26e36c31c17f5242dbacd6ba886ced77d2f634a4b7bcfee4acf7d
+MISC ChangeLog 1561 RMD160 1b81d305e574157d06e151b957362bf0f7a6d919 SHA1 c1c37a5b774f495b04888788779aaee4ab1748de SHA256 29593445e996db1393a08bb822337354e600b5ad3cd7c9af2a5767e7c7f8dcd0
